--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   <title>Finally Pockets</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Source+Sans+3:wght@300&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@1,700&family=Nunito&display=swap"
     rel="stylesheet">
 </head>
 
